fix: html overflowX

--- a/src/utils/keyframes.css
+++ b/src/utils/keyframes.css
@@ -6,3 +6,7 @@
 		transform: rotate(360deg);
 	}
 }
+
+html {
+	overflow-x: hidden;
+}
